<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/RelativeLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"

	tools:context=".Quick Recipe" >

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="400dip"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="404dp" >
		<TableRow
	        	android:id="@+id/tableRow1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/avocado"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/avocadobutton"
	            android:text="@string/avocado"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/beet"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/beetbutton"
	            android:text="@string/beet"
	            android:textColor="@android:color/white" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        
		<CheckBox
	            android:id="@+id/blackolive"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/blackolivebutton"
	            android:text="@string/blackolive"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/broccolli"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/broccollibutton"
	            android:text="@string/broccolli"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/celery"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/celerybutton"
	            android:text="@string/celery"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/carrot"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/carrotbutton"
	            android:text="@string/carrot"
	            android:textColor="@android:color/white" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/cauliflower"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/cauliflowerbutton"
	            android:text="@string/cauliflower"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/celery"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/celerybutton"
	            android:text="@string/celery"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/corn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/cornbutton"
	            android:text="@string/corn"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/cucumber"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/cucumberbutton"
	            android:text="@string/cucumber"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/eggplant"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/eggplantbutton"
	            android:text="@string/eggplant"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/garlic"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/garlicbutton"
	            android:text="@string/garlic"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/ginger"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/gingerbutton"
	            android:text="@string/ginger"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/greenbean"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/greenbeanbutton"
	            android:text="@string/greenbean"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/jalapeno"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/jalapenobutton"
	            android:text="@string/jalapeno"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/lettuce"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/lettucebutton"
	            android:text="@string/lettuce"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/olive"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/olivebutton"
	            android:text="@string/olive"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/onion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/onionbutton"
	            android:text="@string/onion"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/peas"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/peasbutton"
	            android:text="@string/peas"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/pepper"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/pepperbutton"
	            android:text="@string/pepper"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/pickle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/picklebutton"
	            android:text="@string/pickle"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/potato"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/potatobutton"
	            android:text="@string/potato"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/pumpkin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/pumpkinbutton"
	            android:text="@string/pumpkin"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/radish"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/radishbutton"
	            android:text="@string/radish"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/spinach"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/spinachbutton"
	            android:text="@string/spinach"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/squash"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/squashbutton"
	            android:text="@string/squash"
	            android:textColor="@android:color/white" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow14"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/tomato"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/tomatobutton"
	            android:text="@string/tomato"
	            android:textColor="@android:color/white" />
	        <CheckBox
	            android:id="@+id/yam"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/yambutton"
	            android:text="@string/yam"
	            android:textColor="@android:color/white" />
	    </TableRow>

            <TableRow
	        android:id="@+id/tableRow15"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <CheckBox
	            android:id="@+id/zuchini"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/zuchinibutton"
	            android:text="@string/zuchini"
	            android:textColor="@android:color/white" />
	    </TableRow>
	</TableLayout>
</ScrollView>

<Button
    android:id="@+id/findRecipes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginRight="24dp"
    android:layout_toLeftOf="@+id/add"
    android:text="Find Recipes" />

<Button
    android:id="@+id/add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_marginRight="34dp"
    android:text="Add to List" />

</RelativeLayout>