<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreennew"
    tools:context=".HomeScreen" >
    
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/app_name"
        android:textSize="55sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/quick_recipe"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_alignBaseline="@+id/fridge"
        android:layout_alignBottom="@+id/fridge"
        android:layout_alignRight="@+id/textView1"
        android:background="@drawable/longbutton"
        android:text="@string/quick_recipe" />

    <Button
        android:id="@+id/fridge"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/longbutton"
        android:text="@string/fridge_button" />
    
</RelativeLayout>