<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_margin="0dip"
    android:background="@drawable/mascot"
    tools:context=".QuickRecipe" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <Button
            android:id="@+id/meat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/meats"
            android:gravity="center_horizontal"
            android:text="@string/meat" />

        <Button
            android:id="@+id/vegetable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/veggies"
            android:gravity="center_horizontal"
            android:text="@string/title_activity_vegetable" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableRow1"
        android:gravity="center" >

        <Button
            android:id="@+id/fruit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/fruit"
            android:gravity="center_horizontal"
            android:text="@string/title_activity_fruit" />

        <Button
            android:id="@+id/dairy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/dairy"
            android:gravity="center_horizontal"
            android:text="@string/dairy" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableRow2"
        android:gravity="center" >

        <Button
            android:id="@+id/grain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/grains"
            android:gravity="center_horizontal"
            android:text="@string/grain" />

        <Button
            android:id="@+id/spice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spices"
            android:gravity="center_horizontal"
            android:text="@string/spice" />
    </TableRow>

    <Button
        android:id="@+id/quickRecipe"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fridgeList"
        android:layout_alignBottom="@+id/fridgeList"
        android:layout_alignParentRight="true"
        android:background="@drawable/longbutton"
        android:text="Quick Recipe List" />

    <Button
        android:id="@+id/fridgeList"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/longbutton"
        android:text="Fridge List" />

</RelativeLayout>